--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -73,6 +73,7 @@
     "contentWarning": "注釈",
     "follower": "フォロワー",
     "sending": "送信中",
+    "drive": "ドライブ",
 
     "antennaName": "アンテナの名前",
     "antennaSource": "アンテナのソース",
@@ -990,6 +991,8 @@
 
     "unsupportedFile": "対応してないファイルやわ",
     "failedFileSave": "ファイルの保存に失敗したみたいや",
+    
+    "noFiles": "ファイルがありません",
 
     "misskeyGames": "Misskey Games",
     "cookieCliker": "Cookie Cliker",
