--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -992,6 +992,12 @@
     "unsupportedFile": "対応してないファイルやわ",
     "failedFileSave": "ファイルの保存に失敗したみたいや",
     
+    "confirm": "決定",
+
+    "folderName": "フォルダ名",
+    "deleted": "削除しました",
+    "changeFolderName": "フォルダ名を変更",
+    "confirmDeleteFolder": "このフォルダを削除しますか？",
     "noFiles": "ファイルがありません",
 
     "misskeyGames": "Misskey Games",
