--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -23,7 +23,7 @@
     "highlight": "ハイライト",
     "role": "ロール",
     "page": "ページ",
-    "flush": "Play",
+    "flash": "Play",
     "hashtag": "ハッシュタグ",
     "otherServers": "よそのサーバー",
     "follow": "フォロー",
@@ -49,20 +49,20 @@
     "antennaSourceAll": "ぜんぶ",
     "antennaSourceUser": "ユーザー",
     "antennaSourceList": "リスト",
-    "selectAntennas": "ソースを選択",
+    "selectAntennaSource": "ソースを選択",
     "selectList": "リストを選択",
     "antennaSourceUserHintText": "ユーザーネームを改行で区切って指定します",
     "addUser": "ユーザーを追加",
     "keywords": "キーワード",
     "antennaSourceKeywordsHintText": "スペースで区切った単語はAND条件で、改行で区切った行はOR条件で扱います",
     "excludeKeywords": "除外キーワード",
-    "antennaSOurceExcludeKeywordsHintText": "スペースで区切った単語はAND条件で、改行で区切った行はOR条件で扱います",
+    "antennaSourceExcludeKeywordsHintText": "スペースで区切った単語はAND条件で、改行で区切った行はOR条件で扱います",
     "discriminateUpperLower": "大文字と小文字を区別する",
     "receiveReplies": "リプライを受信する",
     "receiveOnlyFiles": "ファイル付きのノートのみ受信する",
     "receiveLocal": "ローカルのみ受信する",
     "confirmDeletingAntenna": "アンテナ削除するか？",
-    
+
     "channelJoinningCounts": "{usersCount}人が参加中",
     "@channelJoinningCounts": {
         "description": "チャンネルの参加人数",
@@ -88,7 +88,7 @@
         "description": "チャンネルのノート数",
         "placeholders": {
             "lastNotedAt": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
@@ -96,8 +96,8 @@
     "willFavorite": "お気に入りに入れるで",
     "willFollow": "フォローするで",
     "channelInformation": "チャンネル情報",
-    "channelStatics": "{notesCount} 投稿 / {usersCount} 人が参加中 / {lastNotedAt} に更新",
-    "@channelStatics": {
+    "channelStatistics": "{notesCount} 投稿 / {usersCount} 人が参加中 / {lastNotedAt} に更新",
+    "@channelStatistics": {
         "description": "チャンネルの統計情報",
         "placeholders": {
             "notesCount": {
@@ -109,7 +109,7 @@
                 "format": "decimalPattern"
             },
             "lastNotedAt": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
@@ -120,17 +120,17 @@
     "alreadyAddedClip": "すでにクリップに追加されてるノートみたいやねん",
     "deleteClip": "クリップから削除する",
 
-    "thanksForAbuse": "内容が送信されました。ご報告ありがとうございました。",
-    "abuseTo": "{userName} を通報する",
-    "@abuseTo": {
+    "thanksForReport": "内容が送信されました。ご報告ありがとうございました。",
+    "reportAbuseOf": "{userName} を通報する",
+    "@reportAbuseOf": {
         "placeholders": {
             "userName": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
-    "plaseInputReasonWhyAbuse": "通報理由の詳細を記入してください。対象のノートがある場合はそのURLも記入してください。",
-    "doAbusing": "通報する",
+    "pleaseInputReasonWhyAbuse": "通報理由の詳細を記入してください。対象のノートがある場合はそのURLも記入してください。",
+    "reportAbuse": "通報する",
 
     "closeTweet": "ツイートを閉じる",
     "closePlayer": "プレイヤーを閉じる",
@@ -139,7 +139,7 @@
     "@mutedNotePlaceholder": {
         "placeholders": {
             "userName": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
@@ -147,7 +147,7 @@
     "showCw": "隠してあるのんの続きを見して",
     "showReactionedNote": "続きを表示",
     "showLongText": "続きを表示",
-    "showLongFiles": "続きを表示",
+    "showMoreFiles": "続きを表示",
     "otherReactions": "ほか{reactionCounts}個",
     "@otherReactions": {
         "placeholders": {
@@ -159,10 +159,9 @@
     },
     "confirmDeleteReaction": "リアクション取り消してもええか？",
     "cancelReaction": "取り消す",
-    "renoted": "がRenote",
-    "selfRenoted": "がセルフRenote",
+    "renotedBy": "がRenote",
+    "selfRenotedBy": "がセルフRenote",
 
-    "detail": "詳細",
     "copyContents": "内容をコピー",
     "copyLinks": "リンクをコピー",
     "copyName": "ユーザー名をコピー",
@@ -171,7 +170,7 @@
     "openBrowsersAsRemote": "ブラウザでリモート先を開く",
     "shareNotes": "ノートを共有",
     "deleteFavorite": "お気に入り解除",
-    "renotedNotes": "リノート直後のノート",
+    "notesAfterRenote": "リノート直後のノート",
     "deletedRecreate": "削除してなおす",
     "confirmDeletedRecreate": "このノート消してなおす？ついたリアクション、Renote、返信は消えて戻らへんで？",
     "deleteRenote": "リノートを解除する",
@@ -182,7 +181,7 @@
     "@confirmPoll": {
         "placeholders": {
             "choiced": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
@@ -212,7 +211,7 @@
     "@remainDiffer": {
         "placeholders": {
             "differ": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
@@ -221,7 +220,7 @@
     "@renoteInSpecificChannel": {
         "placeholders": {
             "channelName": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
@@ -229,11 +228,10 @@
     "@quotedRenoteInSpecificChannel": {
         "placeholders": {
             "channelName": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
-    "quotedRenote": "引用Renote",
     "renoteInChannel": "チャンネルへRenote",
     "renoteInOtherChannel": "よそのチャンネルへRenote",
     "quotedRenoteInChannel": "チャンネルへ引用Renote",
@@ -247,17 +245,17 @@
     "@accountSetting": {
         "placeholders": {
             "accountName": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
-    "generalSetting": "設定",
+    "settings": "設定",
 
     "followedNotification": "{userName}からフォローされたで",
     "@followedNotification": {
         "placeholders": {
             "userName": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
@@ -265,7 +263,7 @@
     "@followRequestAcceptedNotification": {
         "placeholders": {
             "userName": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
@@ -273,10 +271,10 @@
     "@receiveFollowRequestNotification": {
         "placeholders": {
             "userName": {
-                "type": "string"
+                "type": "String"
             }
         }
-    },    
+    },
     "achievementEarnedNotification": "実績を解除したみたいや",
     "testNotification": "テストやで",
     "renotedUsersInNotification": "リノートしてくれはった人",
@@ -286,10 +284,10 @@
     "@renoteAndReactionsNotification": {
         "placeholders": {
             "renotedUser": {
-                "type": "string"
+                "type": "String?"
             },
             "reactionUser": {
-                "type": "string"
+                "type": "String?"
             }
         }
     },
@@ -297,7 +295,7 @@
     "@renoteNotification": {
         "placeholders": {
             "renoteUser": {
-                "type": "string"
+                "type": "String?"
             }
         }
     },
@@ -305,7 +303,7 @@
     "@reactionNotification": {
         "placeholders": {
             "reactionUser": {
-                "type": "string"
+                "type": "String?"
             }
         }
     },
@@ -313,7 +311,7 @@
     "@notedNotification": {
         "placeholders": {
             "notedUser": {
-                "type": "string"
+                "type": "String"
             }
         }
     },
@@ -332,7 +330,7 @@
     "disabledUsingSensitiveCustomEmoji": "ここでセンシティブなカスタム絵文字使われへんねやわ",
 
     "disabledInHashtag": "これらはハッシュタグでは機能しません。",
-    "joiningHashtagUsers": "${usersCount}<small>人</small>",
+    "joiningHashtagUsers": "{usersCount}<small>人</small>",
     "@joiningHashtagUsers": {
         "placeholders": {
             "usersCount": {
@@ -342,7 +340,7 @@
         }
     },
     "searchVoteTab": "アンケート",
-    "allocatedRolesCount": "${usersCount}<small>人</small>",
+    "allocatedRolesCount": "{usersCount}<small>人</small>",
     "@allocatedRolesCount": {
         "placeholders": {
             "usersCount": {
@@ -359,7 +357,4 @@
     "thrownUnknownError": "不明なエラー",
     "thrownError": "エラーが起きたみたいや",
     "unsupportedServer": "非対応のサーバーです"
-    
-
-    
 }
