--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -356,5 +356,366 @@
     "thrownTimeoutException": "サーバーが応答してくれませんでした。",
     "thrownUnknownError": "不明なエラー",
     "thrownError": "エラーが起きたみたいや",
-    "unsupportedServer": "非対応のサーバーです"
+    "unsupportedServer": "非対応のサーバーです",
+
+    "lightMode": "ライトモード",
+    "darkMode": "ダークモード",
+    "syncWithSystem": "デバイスの設定にしたがう",
+    "hideSensitiveMedia": "閲覧注意のメディアは隠す",
+    "showSensitiveMedia": "閲覧注意のメディアを隠さない",
+    "hideAllMedia": "常にメディアを隠す",
+    "removeSensitiveNotes": "TLで閲覧注意つきのノートを表示しない",
+    "enableInfiniteScroll": "自動で次を読み込む",
+    "disableInfiniteScroll": "自動で読み込まない",
+    "top": "上",
+    "bottom": "下",
+    "systemEmoji": "標準",
+
+    "localTimeline": "ローカルタイムライン",
+    "homeTimeline": "ホームタイムライン",
+    "globalTimeline": "グローバルタイムライン",
+    "hybridTimeline": "ソーシャルタイムライン",
+    "roleTimeline": "ロールタイムライン",
+
+    "importFromThisFolder": "このフォルダーからインポートする",
+    "exportedFileNotFound": "ここにMiriaの設定ファイルあれへんかったわ",
+    "importCompleted": "インポート終わったで。",
+    "exportToThisFolder": "このフォルダーに保存する",
+    "overwriteConfirm": "ここにもうあるけど上書きするか？",
+    "overwrite": "上書きする",
+    "exportedFileComment": "Miria設定ファイル",
+    "exportCompleted": "エクスポート終わったで",
+
+    "unlimited": "無期限",
+    "specifyByDate": "日時指定",
+    "specifyByDuration": "期間指定",
+    "seconds": "秒",
+    "minutes": "分",
+    "hours": "時間",
+    "days": "日",
+    "cannotPublicReplyToPrivateNote": "リプライが{visibility}やから、パブリックにでけへん",
+    "@cannotPublicReplyToPrivateNote": {
+        "placeholders": {
+            "visibility": {
+                "type": "String"
+            }
+        }
+    },
+    "cannotPublicNoteBySilencedUser": "サイレンスロールになっているため、パブリックで投稿することはできません。",
+    "cannotFederateNoteToChannel": "チャンネルのノートを連合にすることはでけへんねん。",
+    "cannotFederateReplyToLocalOnlyNote": "リプライの元ノートが連合なしに設定されとるから、このノートも連合なしにしかでけへんねん。",
+    "cannotFederateRenoteToLocalOnlyNote": "リノートしようとしてるノートが連合なしに設定されとるから、このノートも連合なしにしかでけへんねん。",
+
+    "fileName": "ファイル名",
+    "markAsSensitive": "閲覧注意としてマークする",
+    "caption": "キャプション",
+
+    "onlineUsers": "サーバーオンライン人数",
+    "persons": "人",
+    "cpuUsage": "CPU使用率",
+    "memoryUsage": "メモリ使用率",
+    "latency": "応答時間",
+    "milliSeconds": "ミリ秒",
+    "inboxQueue": "ジョブキュー（Inbox queue）",
+    "deliverQueue": "ジョブキュー（Deliver queue）",
+
+    "localOnlyAvailability": "ローカルのみの指定はMisskey 2023.10.2以降で有効です。",
+
+    "notImplemented": "作成中",
+
+    "imageSaved": "画像保存したで",
+    "createClip": "クリップを作成",
+    "tapToShow": "タップして表示",
+
+    "openInAnotherAccount": "別のアカウントで開く",
+
+    "usersCount": "{users}人が参加中",
+    "@usersCount": {
+        "placeholders": {
+            "users": {
+                "type": "int",
+                "format": "decimalPattern"
+            }
+        }
+    },
+
+    "pinnedUsers": "ピンどめ",
+    "sortOrder": "並び順",
+
+    "activeAnnouncements": "いまの",
+    "inactiveAnnouncements": "前の",
+    "announcementsForYou": "あなた宛",
+    "readAnnouncementConfirm": "「{title}」の内容ちゃんと読んだか？",
+    "@readAnnouncementConfirm": {
+        "placeholders": {
+            "title": {
+                "type": "String"
+            }
+        }
+    },
+    "readAnnouncement": "読んだ",
+    "waitAMoment": "もうちょい待って",
+
+    "users": "ユーザー",
+    "posts": "投稿",
+    "software": "ソフトウェア",
+    "language": "言語",
+    "termsOfService": "利用規約",
+    "serverInformation": "サーバー情報",
+    "ads": "広告",
+    "customEmojis": "カスタム絵文字",
+
+    "server": "サーバー",
+    "apiKey": "APIキー",
+    "login": "ログイン",
+    "loginWithMiAuth": "MiAuthでログイン",
+    "loginWithApiKey": "APIキーでログイン",
+    "authorizeAgain": "再度認証をする",
+    "authorize": "認証をする",
+    "authorized": "認証してきた",
+    "selectServerToLogin": "ログインするサーバーをえらんでください",
+
+    "pageAuthor": "このページ書きはった人",
+    "pageNotSupported": "Miriaが対応していないページやわ　ブラウザで見てな",
+    "cannotLikeYourPage": "自分のページにはふぁぼつけられへんねん",
+    "annotation": "注釈",
+
+    "selectFile": "ファイルを選択",
+    "upload": "アップロード",
+    "fromDrive": "ドライブから",
+
+    "randomizeFileName": "ファイル名をランダムにする",
+    "markAsSensitiveDescription": "閲覧注意の設定を外した場合でも、自動で閲覧注意にマークされることがあります。",
+    "satisfied": "これでええわ",
+
+    "replyPlaceholder": "何て送る？",
+    "notePlaceholder": "何してはる？",
+    "editNoteFileExists": "メディアがあります（編集はできません）",
+    "editNoteVoteExists": "投票があります（編集はできません）",
+
+    "publicDescription": "みんなに公開",
+    "home": "ホーム",
+    "homeDescription": "ホームタイムラインのみに公開",
+    "followers": "フォロワー",
+    "followersDescription": "自分のフォロワーのみに公開",
+    "direct": "ダイレクト",
+    "directDescription": "選択したユーザーのみに公開",
+    "all": "すべて",
+
+    "likeOnly": "いいねのみ",
+    "likeOnlyForRemote": "リモートからはいいねのみ",
+    "nonSensitiveOnly": "非センシティブのみ",
+    "nonSensitiveOnlyForLocalLikeOnlyForRemote": "非センシティブのみ（リモートからはいいねのみ）",
+
+    "replyTo": "返信先",
+
+    "addChoice": "増やす",
+    "choiceNumber": "回答{choice}",
+    "@choiceNumber": {
+        "placeholders": {
+            "choice": {
+                "type": "int",
+                "format": "decimalPattern"
+            }
+        }
+    },
+    "canMultipleChoice": "複数回答",
+
+    "accept": "許可",
+    "deny": "拒否",
+
+    "generalSettings": "全般設定",
+    "accountSettings": "アカウント設定",
+    "tabSettings": "タブ設定",
+    "settingsImportExport": "設定のインポート・エクスポート",
+    "aboutMiria": "このアプリについて",
+
+    "quitAccountSettings": "アカウント設定をおわる",
+
+    "packageName": "パッケージ名",
+    "version": "バージョン",
+    "developer": "開発者",
+    "officialWebSite": "公式ページ",
+    "openSourceLicense": "オープンソースライセンス",
+    "showLicense": "ライセンスを表示する",
+
+    "general": "全般",
+    "displayOfSensitiveNotes": "閲覧注意のついたノートの表示",
+    "infiniteScroll": "一覧の自動更新",
+    "enableAnimatedMfm": "動きのあるMFM",
+    "enableAnimatedMfmDescription": "動きのあるMFMを有効にします。",
+    "collapseNotes": "ノートの省略",
+    "collapseReactionedRenotes": "リアクション済みノートのRenoteを省略します。",
+    "collapseLongNotes": "長いノートを省略します。",
+    "tabPosition": "タブの位置",
+    "tabPositionDescription": "{tabPosition}に表示する",
+    "@tabPositionDescription": {
+        "placeholders": {
+            "tabPosition": {
+                "type": "String"
+            }
+        }
+    },
+    "theme": "テーマ",
+    "themeForLightMode": "ライトモードで使うテーマ",
+    "themeForDarkMode": "ダークモードで使うテーマ",
+    "themeIsh": "{theme}っぽいの",
+    "@themeIsh": {
+        "placeholders": {
+            "theme": {
+                "type": "String"
+            }
+        }
+    },
+    "selectLightOrDarkMode": "ライトモード・ダークモードのつかいわけ",
+    "reaction": "リアクション",
+    "emojiTapReaction": "ノート内の絵文字タップでリアクションする",
+    "emojiTapReactionDescription": "ノート内の絵文字をタップしてリアクションします。MFMや外部サーバーの絵文字の場合うまく機能しないことがあります。",
+    "emojiStyle": "絵文字のスタイル",
+    "fontStandard": "フォント（標準）",
+    "fontSerif": "フォント（$[font.serif 用）",
+    "fontMonospace": "フォント （$[font.monospace やコードブロック 用）",
+    "fontCursive": "フォント （$[font.cursive 用）",
+    "fontFantasy": "フォント （$[font.fantasy 用）",
+    "fontSize": "フォントサイズ",
+    "systemFont": "システム標準",
+
+    "selectFolder": "フォルダー選択",
+    "importSettings": "設定のインポート",
+    "importSettingsDescription": "設定ファイルをドライブから読み込みます。設定ファイルには保存されたときのすべてのアカウントの設定情報が記録されていますが、そのうちこの端末でログインしているアカウントの情報のみを読み込みます。",
+    "pleaseSelectAccount": "アカウントを選んでや",
+    "select": "選択",
+    "exportSettings": "設定のエクスポート",
+    "exportSettingsDescription1": "設定ファイルをドライブに保存します。設定ファイルにはこの端末でログインしているすべてのアカウントの、ログイン情報以外の情報が記録されます。",
+    "exportSettingsDescription2": "設定ファイルは1回のエクスポートにつき1つのアカウントに対して保存されます。",
+    "pleaseSelectAccountToExportSettings": "設定ファイルを保存するアカウントを選んでや",
+    "save": "保存",
+
+    "selectAntenna": "アンテナ選択",
+    "selectChannel": "チャンネル選択",
+    "selectIcon": "アイコンを選択",
+    "standardIcon": "標準",
+    "emojiIcon": "カスタム絵文字",
+    "selectRole": "ロール選択",
+    "apply": "反映する",
+    "account": "アカウント",
+    "tabType": "タブの種類",
+    "tabName": "タブの名前",
+    "icon": "アイコン",
+    "displayRenotes": "リノートを表示する",
+    "includeReplies": "返信も入れる",
+    "includeRepliesAvailability": "Misskey v2023.10.1以降の機能です。",
+    "mediaOnly": "ファイルのみにする",
+    "subscribeNotes": "リアクションや投票数を自動更新する",
+    "subscribeNotesDescription": "オフにすると、リアクションや投票数が自動更新されませんが、バッテリー消費を抑えられることがあります。",
+    "pleaseSelectTabType": "タブの種類を選択してください。",
+    "pleaseSelectIcon": "アイコンを選択してください。",
+    "pleaseSelectChannel": "チャンネルを選択してください。",
+    "pleaseSelectList": "リストを選択してください。",
+    "pleaseSelectAntenna": "アンテナを選択してください。",
+
+    "reactionDeck": "リアクションデッキ",
+    "wordMute": "ワードミュート",
+    "wordMuteDescription": "スペースで区切るとAND指定になり、改行で区切るとOR指定になります。\nキーワードをスラッシュで囲むと正規表現になります。\nただし、Misskey Webと正規表現の仕様が異なるため、Miriaで動作する正規表現がMisskey Webで動作しなかったり、その逆が発生することがあります。",
+    "instanceMute": "インスタンスミュート",
+    "instanceMuteDescription1": "設定したサーバーのノートを隠します。",
+    "instanceMuteDescription2": "ミュートしたサーバーのユーザーへの返信を含めて、設定したサーバーの全てのノートとRenoteをミュートします。\n改行で区切って設定します。",
+
+    "bulkAddReactions": "一括追加",
+    "bulkAddReactionsDescription1": "お使いのブラウザでリアクションデッキをコピーしたいアカウントにログインしてください",
+    "bulkAddReactionsDescription2": "同じブラウザで以下のURLにアクセスして「値 (JSON)」の内容をすべて選択してコピーしてください",
+    "bulkAddReactionsDescription3": "コピーしたものを下のテキストボックスに貼り付けてください",
+    "pasteHere": "ここに貼り付け",
+    "invalidInput": "入力が有効な値ではありません",
+    "clear": "クリア",
+    "copy": "コピー",
+    "editReactionDeckDescription": "長押しして並び変え、押して削除、＋を押して追加します。",
+    "clearReactionDeckConfirm": "すでに設定済みのリアクションデッキをいったんすべてクリアしますか？",
+    "clearReactionDeck": "クリアする",
+
+    "accountGeneralSettings": "{accountName} 全般設定",
+    "@accountGeneralSettings": {
+        "placeholders": {
+            "accountName": {
+                "type": "String"
+            }
+        }
+    },
+    "privacy": "プライバシー",
+    "setDefaultNoteVisibility": "デフォルトの公開範囲を設定します。",
+    "noteVisibility": "ノート公開範囲",
+    "disableFederation": "連合をなしにします",
+    "disableFederationDescription": "連合をなしにしても、非公開になりません。ほとんどの場合、連合なしにする必要はありません。",
+    "reactionAcceptance": "リアクションの受け入れ",
+
+    "selectAccountToShare": "共有するアカウントを選択",
+
+    "createAntenna": "アンテナを作成",
+    "memo": "メモ",
+    "memoDescription": "なんかメモることあったら書いとき",
+    "createBlockConfirm": "ブロックしてもええか？",
+    "createBlock": "ブロックする",
+    "addToList": "リストに追加",
+    "addToAntenna": "アンテナに追加",
+    "deleteRenoteMute": "Renoteのミュートを解除する",
+    "createRenoteMute": "Renoteをミュートする",
+    "deleteMute": "ミュートを解除する",
+    "createMute": "ミュートする",
+    "deleteBlock": "ブロックを解除する",
+    "minutes10": "10分間",
+    "hours1": "1時間",
+    "day1": "1日",
+    "week1": "1週間",
+    "selectDuration": "期限を選択してください。",
+    "unfollowConfirm": "フォロー解除してもええか？",
+    "deleteFollow": "解除する",
+    "renoteMuting": "Renoteのミュート中",
+    "muting": "ミュート中",
+    "blocking": "ブロック中",
+    "followed": "フォローされています",
+    "unfollow": "フォロー解除",
+    "followRequestPending": "フォロー許可待ち",
+    "followRequest": "フォロー申請",
+    "createFollow": "フォローする",
+    "refreshing": "更新中",
+    "remoteUserCaution": "リモートユーザーのため、情報が不完全です。",
+    "showServerInformation": "サーバー情報を表示",
+    "location": "場所",
+    "registeredDate": "登録日",
+    "birthday": "誕生日",
+    "listName": "リスト名",
+    "includeRepliesShort": "返信つき",
+    "mediaOnlyShort": "ファイルつき",
+    "displayRenotesShort": "リノートも",
+    "showNotesBeforeThisDate": "この日までを表示",
+    "userHighlightAvailability": "ハイライトはMisskey 2023.10.0以降の機能です。",
+    "userPlaysAvailability": "この機能はMisskey 2023.9以降でのみ使用できます。",
+    "userInfomation": "アカウント情報",
+    "userInfomationLocal": "アカウント情報（ローカル）",
+    "userInfomationRemote": "アカウント情報（リモート）",
+    "userNotes": "ノート",
+    "userNotesLocal": "ノート（ローカル）",
+    "userNotesRemote": "ノート（リモート）",
+    "userReactions": "リアクション",
+    "userPages": "ページ",
+    "userPlays": "Play",
+    "createList": "リストを作成",
+
+    "members": "メンバー",
+    "listCapacity": "{members}/{limit}人",
+    "@listCapacity": {
+        "placeholders": {
+            "members": {
+                "type": "int",
+                "format": "decimalPattern"
+            },
+            "limit": {
+                "type": "int",
+                "format": "decimalPattern"
+            }
+        }
+    },
+    "removeUserConfirm": "このユーザーをリストから外しますか？",
+    "removeUser": "外す",
+    "deleteListConfirm": "このリストを削除しますか？"
 }
