--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -923,5 +923,13 @@
     },
     "removeUserConfirm": "このユーザーをリストから外しますか？",
     "removeUser": "外す",
-    "deleteListConfirm": "このリストを削除しますか？"
+    "deleteListConfirm": "このリストを削除しますか？",
+    "homeOnly": "ホームのみ",
+    "followersOnly": "フォロワーのみ",
+    "followerAscendingOrder": "フォロワーが少ない順",
+    "followerDescendingOrder": "フォロワーが多い順",
+    "createdAtAscendingOrder": "古い順",
+    "createdAtDescendingOrder": "新しい順",
+    "updatedAtAscendingOrder": "更新されていない順",
+    "updatedAtDescendingOrder": "更新された順"
 }
